--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,3 +34,11 @@ ul li a {
     padding:14px 16px;
     text-decoration:none;
 }
+
+td.toggle img {
+    width:50px;
+}
+
+.profile img, .events img {
+    width:150px;
+}
