--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Events</h1>
 
-<table>
+<table class="events">
   <thead>
     <tr>
       <th>Event ID</th>
@@ -11,8 +11,6 @@
       <th>Date</th>
       <th>Time</th>
       <th>Pic</th>
-      <th>Private</th>
-      <th>Editable</th>
       <th>Event Creator</th>
       <th colspan="3"></th>
     </tr>
@@ -26,14 +24,14 @@
           <td><%= event.name %></td>
           <td><%= event.description %></td>
           <td><%= event.date %></td>
-          <td><%= event.time %></td>
-          <td><%= event.pic %></td>
-          <td><%= event.private %></td>
-          <td><%= event.editable %></td>
+          <td><%= event.time.strftime("%I:%M %p") %></td>
+          <td><%= image_tag(event.pic) %></td>
           <td><%= link_to 'Creator', '/users/' + event.user_id.to_s %></td>
-          <td><%= link_to 'Show', event %></td>
-          <td><%= link_to 'Edit', edit_event_path(event) %></td>
-          <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'View', event %></td>
+          <% if current_user.id == event.user_id %>
+              <td><%= link_to 'Edit', edit_event_path(event) %></td>
+              <td><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         </tr>
       <% end %>
     <%= will_paginate @events %>
