--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -14,9 +14,6 @@
       <li class="nav-item">
         <%= link_to "Events", "/events", class: "nav-link" %>
       </li>
-      <li class="nav-item">
-        <%= link_to "View Cart", "/cart", class: "nav-link"  %>
-      </li>
       <% if !user_signed_in? %>
         <li class="nav-item">
           <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
@@ -26,7 +23,7 @@
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Profile", edit_user_registration_path, class: "nav-link" %>
+          <a class="nav-link" href="/users/<%= current_user.id %>">Profile</a>
         </li>
         <li class="nav-item">
           <%= link_to "Logout", destroy_user_session_path, :method => :delete, class: "nav-link" %>
