--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -1,9 +1,64 @@
 <%
 @name = @user.username
 if @b1
-    @name = @user.fname + @user.lname
+    @name = @user.fname + " " + @user.lname
 end
 %>
-<h1><%= @b1 ? @user.fname : @user.username %></h1>
-<h1><%= @name %></h1>
-<p>Find me in app/views/static_pages/profile.html.erb</p>
+<div class="profile">
+    <h1><%= @b1 ? @name : @user.username %></h1>
+    <%= image_tag("pic-placeholder.png") %>
+    
+    <div class="bio">
+        <h2>Bio</h2>
+        <p><%= @b1 ? @user.bio : "Add this user as a friend to see their bio" %></p>
+    </div>
+
+    <% if !@b1 %>
+        <!-- button to add friend -->
+    <% end %>
+
+    <div class="events">
+        <h2>Events</h2>
+        <% if @events.size == 0 %>
+            <p>This user has not created any events.</p>
+        <% else %>
+            <table>
+                <thead>
+                <tr>
+                    <th>Event ID</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <th>Pic</th>
+                    <th>Private</th>
+                    <th colspan="3"></th>
+                </tr>
+                </thead>
+            
+                <tbody>
+                    <% @events.each do |event| %>
+                        <tr>
+                            <td><%= event.id %></td>
+                            <td><%= event.name %></td>
+                            <td><%= event.description %></td>
+                            <td><%= event.date %></td>
+                            <td><%= event.time.strftime("%I:%M %p") %></td>
+                            <td><%= image_tag(event.pic) %></td>
+                            <td class="toggle"><%= event.private ? image_tag("tick.png") : image_tag("red-x.png") %></td>
+                            <td><%= link_to 'View', event %></td>
+                            <% if current_user.id == @user.id %>
+                                <td><%= link_to 'Edit', edit_event_path(event) %></td>
+                                <td><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                            <% end %>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        <% end %>
+    </div>
+    <% if current_user.id == @user.id %>
+        <%= link_to "Edit Profile", edit_user_registration_path, class: "btn" %>
+    <% end %>
+    <p>Find me in app/views/static_pages/profile.html.erb</p>
+</div>
