--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,8 +11,8 @@
       <th>Date</th>
       <th>Time</th>
       <th>Pic</th>
-      <th>Event Creator</th>
-      <th colspan="3"></th>
+      <th>Creator</th>
+      <th>View Event</th>
     </tr>
   </thead>
 
@@ -26,12 +26,14 @@
           <td><%= event.date %></td>
           <td><%= event.time.strftime("%I:%M %p") %></td>
           <td><%= image_tag(event.pic) %></td>
-          <td><%= link_to 'Creator', '/users/' + event.user_id.to_s %></td>
+          <%
+          @name = User.all.find(event.user_id).username
+          if @b1
+              @name = User.all.find(event.user_id).fname + " " + User.all.find(event.user_id).lname
+          end
+          %>
+          <td><%= link_to @name, '/users/' + event.user_id.to_s %></td>
           <td><%= link_to 'View', event %></td>
-          <% if current_user.id == event.user_id %>
-              <td><%= link_to 'Edit', edit_event_path(event) %></td>
-              <td><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
         </tr>
       <% end %>
     <%= will_paginate @events %>
