--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -12,13 +12,13 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :f1 %>
-    <%= form.number_field :f1 %>
+    <%= form.label :user_id %>
+    <%= form.number_field :user_id %>
   </div>
 
   <div class="field">
-    <%= form.label :f2 %>
-    <%= form.number_field :f2 %>
+    <%= form.label :friend_id %>
+    <%= form.number_field :friend_id %>
   </div>
 
   <div class="actions">
