--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>F1:</strong>
-  <%= @friend.f1 %>
+  <strong>User:</strong>
+  <%= @friend.user_id %>
 </p>
 
 <p>
-  <strong>F2:</strong>
-  <%= @friend.f2 %>
+  <strong>Friend:</strong>
+  <%= @friend.friend_id %>
 </p>
 
 <%= link_to 'Edit', edit_friend_path(@friend) %> |
