--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,18 +1,22 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+li.notifications {
+    height:50px;
+    overflow:hidden;
+    a {
+        position:relative;
+        z-index:1;
+        padding:5px 2px;
+    }
+    img {
+        max-width:35px;
+    }
+    span {
+        position:relative;
+        top:-35px;
+        left:10px;
+        color:mediumaquamarine;
+        font-weight: bold;
+    }
+}
 
  a {
      text-decoration:none;
