--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>F1</th>
-      <th>F2</th>
+      <th>User</th>
+      <th>Friend</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,8 +14,8 @@
   <tbody>
     <% @friends.each do |friend| %>
       <tr>
-        <td><%= friend.f1 %></td>
-        <td><%= friend.f2 %></td>
+        <td><%= friend.user_id %></td>
+        <td><%= friend.friend_id %></td>
         <td><%= link_to 'Show', friend %></td>
         <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
         <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
