--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,21 +1,6 @@
 li.notifications {
-    height:50px;
-    overflow:hidden;
-    a {
-        position:relative;
-        z-index:1;
-        padding:5px 2px;
-    }
-    img {
-        max-width:35px;
-    }
-    span {
-        position:relative;
-        top:-35px;
-        left:10px;
-        color:mediumaquamarine;
-        font-weight: bold;
-    }
+    background:url("notifications.png") no-repeat;
+    background-size:contain;
 }
 
  a {
@@ -51,7 +36,7 @@ td.toggle img {
     width:50px;
 }
 
-.profile img, .event img, .events img {
+.profile img, .event img, .events img, .friend-profile-sm img {
     width:150px;
 }
 
