--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -2,28 +2,28 @@
 
 <h1>Friends</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Friend</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @friends.each do |friend| %>
-      <tr>
-        <td><%= friend.user_id %></td>
-        <td><%= friend.friend_id %></td>
-        <td><%= link_to 'Show', friend %></td>
-        <td><%= link_to 'Edit', edit_friend_path(friend) %></td>
-        <td><%= link_to 'Destroy', friend, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Friend', new_friend_path %>
+<% @friends.each do |friend| %>
+  <% @friend = User.find_by(id: friend.friend_id)
+    @name = @friend.fname.to_s + " " + @friend.lname.to_s
+    @name = @name.eql?(" ") ? @friend.username.to_s : @name
+    @pic = getPic(current_user.id, @friend.id)
+  %>
+  <a href="/users/<%= @friend.id %>">
+    <div class="friend-profile-sm">
+      <p><%= @name %></p>
+      <p><% if @pic == "ph.png" %>
+            <%= image_tag(@pic) %>
+         <% else %>
+            <img src=<%= @pic %> />
+         <% end %></p>
+      <% if @b1
+        @f2 = User.find_by(id: friend.user_id)
+        @name = @f2.fname.to_s + " " + @f2.lname.to_s
+        @name = @name.eql?(" ") ? @f2.username.to_s : @name
+      %>
+        <p>Friends with <%= @name %></p>
+      <% end %>
+    </div>
+  </a>
+<% end %>
