added new logo and profile images

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :pic %><br />
-    <%= f.text_field :pic, autocomplete: "picture url" %>
+    <%= f.label :"Profile Photo" %><br />
+    <%= f.file_field :avatar %>
   </div>
 
   <div class="field">
