--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar" id="main-nav">
-  <a href="/"><%= image_tag("food-world-logo-sm.png", alt: "Logo", :class => "logo") %></a>
+  <a href="/"><%= image_tag("logo.png", alt: "Logo", :class => "logo") %></a>
   <div class="nav-links">
     <ul class="nav">
       <li class="nav-item">
