invites and event pictures
Invites working
Event avatars working

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -32,8 +32,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :pic %>
-    <%= form.text_field :pic %>
+    <%= form.label :"Event Picture" %>
+    <%= form.file_field :avatar %>
   </div>
 
   <div class="field">
