--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -32,7 +32,11 @@
           <td><%= event.description %></td>
           <td><%= event.date %></td>
           <td><%= event.time.strftime("%I:%M %p") %></td>
-          <td><%= image_tag(event.pic) %></td>
+          <td>
+          <% if event.avatar.attached? %>
+              <image src="<%= url_for(event.avatar) %>">
+          <% end %>
+          </td>
           <%
           @creator = User.all.find(event.user_id)
           @b2 = @b1 || current_user.id == @creator.id
