--- a/app/views/static_pages/profile.html.erb
+++ b/app/views/static_pages/profile.html.erb
@@ -1,7 +1,8 @@
+<p id="notice"><%= notice %></p>
 <div class="profile">
     <h1><%= @name %></h1>
     <p>
-        <% if @creator.avatar.attached? %>
+        <% if @creator.avatar.attached? && @b3 %>
             <image src="<%= url_for(@creator.avatar) %>">
          <% else %>
             <%= image_tag("ph.png") %>
@@ -10,23 +11,23 @@
     
     <div class="bio">
         <h2>Bio</h2>
-        <p><%= (@b2 || @friend) ? @creator.bio : "Add this user as a friend to see their bio" %></p>
+        <p><%= @b3 ? @creator.bio : "Add this user as a friend to see their bio" %></p>
     </div>
 
-    <% if !@b2 && !@frs && !@friend %>
+    <% if !@b3 && !@frs %>
         <button class="btn1" onclick="window.location.href='/users/<%= @creator.id %>/<%= @current_user.id %>'">
             <span class="circle" aria-hidden="true">
             <span class="icon arrow"></span>
             </span>
             <span class="button-text">Friend Request</span>
         </button>
-    <% elsif !@b2 && !@friend %>
+    <% elsif !@b3 %>
         <p>Friend Request Sent</p>
     <% end %>
 
-    //show user events
+    <!-- show user events -->
     <div class="events">
-        <h2>Events</h2>
+        <h2><%= @name %>'s Events</h2>
         <% if @events.count == 0 %>
             <p>This user has not created any events.</p>
         <% else %>
@@ -50,7 +51,11 @@
                             <td><%= event.description %></td>
                             <td><%= event.date %></td>
                             <td><%= event.time.strftime("%I:%M %p") %></td>
-                            <td><%= image_tag(event.pic) %></td>
+                            <td>
+                                <% if event.avatar.attached? %>
+                                    <image src="<%= url_for(event.avatar) %>">
+                                <% end %>
+                            </td>
                             <td class="toggle"><%= !event.private ? image_tag("tick.png") : image_tag("red-x.png") %></td>
                             <td>
                                 <button class="btn1" onclick="window.location.href='/events/<%= event.id %>'">
@@ -62,7 +67,7 @@
                             </td>
                             <% if @b2 %>
                                 <td>
-                                    <button class="btn1" onclick="window.location.href='<%= edit_event_path(event) %>">
+                                    <button class="btn1" onclick="window.location.href='<%= edit_event_path(event) %>'">
                                         <span class="circle" aria-hidden="true">
                                         <span class="icon arrow"></span>
                                         </span>
@@ -79,8 +84,7 @@
     </div>
 
     <% if !(current_user.id == @creator.id)
-        @userEvents = current_user.events %> //user is not on their own profile
-        //show user events
+        @userEvents = current_user.events %>
         <div class="events">
             <h2>Your Events</h2>
             <% if @userEvents.count == 0 %>
@@ -105,14 +109,22 @@
                                 <td><%= event.description %></td>
                                 <td><%= event.date %></td>
                                 <td><%= event.time.strftime("%I:%M %p") %></td>
-                                <td><%= image_tag(event.pic) %></td>
                                 <td>
-                                    <button class="btn1" onclick="window.location.href='/events/<%= event.id %>'">
-                                        <span class="circle" aria-hidden="true">
-                                        <span class="icon arrow"></span>
-                                        </span>
-                                        <span class="button-text">Invite User</span>
-                                    </button>
+                                    <% if event.avatar.attached? %>
+                                        <image src="<%= url_for(event.avatar) %>">
+                                    <% end %>
+                                </td>
+                                <td>
+                                    <% if !isInvited(event.id, @creator.id) %>
+                                        <button class="btn1" onclick="window.location.href='/events/<%= event.id %>/<%= @creator.id %>/1'">
+                                            <span class="circle" aria-hidden="true">
+                                            <span class="icon arrow"></span>
+                                            </span>
+                                            <span class="button-text">Invite User</span>
+                                        </button>
+                                    <% else %>
+                                        <p>This user has been invited.</p>
+                                    <% end %>
                                 </td>
                             </tr>
                         <% end %>
