--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -41,13 +41,15 @@
   <% @attending.each do |attender|
     @user = User.find_by(id: attender.user_id)
     @name = getName(current_user, @user)
-    @pic = getPic(current_user, @user) %>
+    @pic = showPic(current_user, @user) %>
     <p><%= @name %></p>
-    <p><% if @pic == "ph.png" %>
-          <%= image_tag(@pic) %>
-        <% else %>
-          <img src="<%= url_for(@user.avatar) %>" />
-        <% end %></p>
+    <p>
+      <% if @pic %>
+        <img src="<%= url_for(@user.avatar) %>" />
+      <% else %>
+        <%= image_tag("ph.png") %>
+      <% end %>
+    </p>
   <% end %>
   <% if !isAttending(@event.id, current_user.id) %>
   <button class="btn1" onclick="window.location.href='/events/<%= @event.id %>/1'">
