--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -27,7 +27,7 @@
         <a class="nav-link" href="/notifications"><%= current_user.notifications.count %></a>
       </li>
       <li class="nav-item">
-        <%= link_to "Friends", "/friends", class: "nav-link" %>
+        <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
       </li>
         <li class="nav-item">
           <a class="nav-link" href="/users/<%= current_user.id %>">Profile</a>
