--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Events</h1>
 
 <button class="btn1" onclick="window.location.href='<%= new_event_path %>'">
@@ -9,10 +7,12 @@
   <span class="button-text">Create Event</span>
 </button>
 
-<table class="events">
-  <thead>
+<table class="table events">
+  <thead class="thead-dark">
     <tr>
-      <th>Event ID</th>
+      <% if @b1 %>
+        <th>Event ID</th>
+      <% end %>
       <th>Name</th>
       <th>Description</th>
       <th>Date</th>
@@ -27,7 +27,9 @@
     <%= will_paginate @events %>
       <% @events.each do |event| %>
         <tr>
-          <td><%= event.id %></td>
+          <% if @b1 %>
+            <td><%= event.id %></td>
+          <% end %>
           <td><%= event.name %></td>
           <td><%= event.description %></td>
           <td><%= event.date %></td>
@@ -60,7 +62,7 @@
             </button>
           </td>
           <% if @b2 %>
-            <td><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Delete', event, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %></td>
           <% end %>
         </tr>
       <% end %>
