--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="event">
   <p>
     <strong>Name:</strong>
@@ -66,7 +64,7 @@
         </span>
         <span class="button-text">Edit</span>
     </button>
-    <%= link_to 'Delete', @event, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'Delete', @event, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %>
   <% end %>
   <button class="btn1" onclick="window.location.href='javascript: history.go(-1)'">
       <span class="circle" aria-hidden="true">
