--- a/app/views/html/_header.html.erb
+++ b/app/views/html/_header.html.erb
@@ -1,47 +1,72 @@
-<nav class="navbar" id="main-nav">
-  <a href="/"><%= image_tag("logo.png", alt: "Logo", :class => "logo") %></a>
-  <div class="nav-links">
-    <ul class="nav">
-      <li class="nav-item">
-        <%= link_to "Home", "/", class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Help", "/help", class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "About", "/about", class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Events", "/events", class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-      <% if !user_signed_in? %>
-        <li class="nav-item">
-          <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
-        </li> 
-        <li class="nav-item">
-          <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
+<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+  <div class="container">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="/" class="navbar-brand"><%= image_tag("logo.png", alt: "Logo", :class => "logo") %></a>
+    </div>
+    <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <%= link_to "Home", "/", class: "nav-link" %>
         </li>
-      <% else %>
-      <li class="nav-item notifications">
-        <a class="nav-link" href="/notifications"><%= current_user.notifications.count %></a>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
-      </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/<%= current_user.id %>">Profile</a>
+        <li>
+          <%= link_to "About", "/about", class: "nav-link" %>
         </li>
-        <% if current_user.admin? %>
-          <li class="nav-item">
-            <%= link_to "Admin", "/admin", class: "nav-link" %>
+        <li>
+          <%= link_to "Help", "/help", class: "nav-link" %>
+        </li>
+        
+        <li class="dropdown">
+          <a class="dropbtn">Events <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "All Events", "/events", class: "nav-link" %></li>
+            <li><%= link_to "My Events", "/myevents", class: "nav-link" %></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+            <a class="dropbtn">Account <b class="caret"></b></a>
+            <ul class="dropdown-menu">  
+              <% if !user_signed_in? %>
+                <li>
+                  <%= link_to "Register", new_user_registration_path, class: "nav-link" %>
+                </li>
+                <li>
+                  <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
+                </li>
+              <% else %>
+                <li class="notifications">
+                <%= link_to "Notifications (" + current_user.notifications.count.to_s + ")", "/notifications", class: "nav-link" %>
+                </li>
+                <li>
+                  <%= link_to "Friends (" + current_user.friends.count.to_s + ")", "/friends", class: "nav-link" %>
+                </li>
+                <li>
+                  <a class="nav-link" href="/users/<%= current_user.id %>">Profile</a>
+                </li>
+                <% if current_user.admin? %>
+                  <li class="nav-item">
+                    <%= link_to "Admin", "/admin", class: "nav-link" %>
+                  </li>
+                <% end %>
+                <li class="nav-item">
+                  <%= link_to "Logout", destroy_user_session_path, :method => :delete, class: "nav-link" %>
+                </li>
+              <% end %>
+            </ul>
           </li>
-        <% end %>
-        <li class="nav-item">
-          <%= link_to "Logout", destroy_user_session_path, :method => :delete, class: "nav-link" %>
-        </li>
-      <% end %>
-    </ul>
+      </ul>
+    </nav>
   </div>
-</nav>
+</header>
+<div class="alert">
+    <%= alert %>
+</div>
+<div class="notice">
+    <%= notice %>
+</div>
 
