--- a/app/views/profiles/profile.html.erb
+++ b/app/views/profiles/profile.html.erb
@@ -21,8 +21,6 @@
             </span>
             <span class="button-text">Friend Request</span>
         </button>
-    <% elsif !@b3 %>
-        <p>Friend Request Sent</p>
     <% end %>
 
     <!-- show user events -->
@@ -31,17 +29,17 @@
         <% if @events.count == 0 %>
             <p>This user has not created any events.</p>
         <% else %>
-            <table>
-                <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Date</th>
-                    <th>Time</th>
-                    <th>Pic</th>
-                    <th>Public</th>
-                    <th colspan="3"></th>
-                </tr>
+            <table class="table events">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Date</th>
+                        <th>Time</th>
+                        <th>Image</th>
+                        <th>Public</th>
+                        <th colspan="<%= @b2?3:1 %>"></th>
+                    </tr>
                 </thead>
             
                 <tbody>
@@ -74,7 +72,7 @@
                                         <span class="button-text">Edit</span>
                                     </button>
                                 </td>
-                                <td><%= link_to 'Delete', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                                <td><%= link_to 'Delete', event, method: :delete, :role=>"button", :class => "btn btn-danger mb-2", data: { confirm: 'Are you sure?' } %></td>
                             <% end %>
                         </tr>
                     <% end %>
@@ -90,16 +88,16 @@
             <% if @userEvents.count == 0 %>
                 <p>You have not created any events.</p>
             <% else %>
-                <table>
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Description</th>
-                        <th>Date</th>
-                        <th>Time</th>
-                        <th>Pic</th>
-                        <th colspan="3"></th>
-                    </tr>
+                <table class="table events">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>Image</th>
+                            <th colspan="1"></th>
+                        </tr>
                     </thead>
                 
                     <tbody>
